Update and refactoring for Java 25 and Quarkus 3.34.3, enhanced TLS configuration options
Signed-off-by: Phil Hunt <phil.hunt@independentid.com>